# weatherapp

./: .gitignore  README.md  pyproject.toml
myapp/: settings.py  urls.py
weather/: urls.py  views.py
weather/templates/weather/: home.html
